the client side works now

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -107,11 +107,17 @@
 
         <div class="btn-container">
           <button type="button" id="getAlbumButton">Get Album</button>
+          <button type="button" id="getOneAlbumButton">Get One Album</button>
           <button type="button" id="createAlbumButton">Create Album</button>
           <button type="button" id="updateAlbumButton">Update Album</button>
           <button type="button" id="deleteAlbumButton">Delete Album</button>
+          <p></p>
+          <label id="Albums" style="font-size: 20px;">No album showing</label>
+
+
         </div>
       </form>
     </div>
   </body>
+  <script src="client.js"></script>
 </html>
